--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,43 @@
 @import url(./fonts.css);
+
+/*css variables */
+@import url(./partials/variables.css);
+
+/*start navigation*/
+
+.header_area .main-menu .navbar .navbar-brand {
+    padding: 0 2rem 0 5rem;
+}
+
+.header_area .main-menu .navbar {
+    padding: 1rem 10rem;
+}
+
+
+.header_area .main-menu .nav-item .nav-link {
+    font:  500 13px/2px var(--font-family);
+    text-transform: uppercase;
+    padding: 1.0rem;
+    color: (--title-color);
+}
+
+.header_area .main-menu .navbar-nav .active {
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.header_area .main-menu .navbar-nav a:hover {
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+
+
+
+
+
+/**/
