little changes, rename variables.css file to _variables.css

--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -11,6 +11,7 @@
 }
 
 /*buttons*/
+
 .button {
     padding: 0.8rem 2.2rem;
     font: normal 500 16px/20px var(--font-family);
@@ -19,10 +20,10 @@
     border-radius: 4px;
 }
 
-.button .primary-button {
+.button.primary-button {
     background: var(--gradient-color);
     background-clip: padding-box;
     color: whitesmoke;
     transition: background .6s ease;
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-color);
 }
