--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 @import url(./fonts.css);
 
 /*css variables */
-@import url(./partials/variables.css);
+@import url(./partials/_variables.css);
 
 /*global css*/
 @import url(./partials/_global.css);
 
 /*start navigation*/
 
-.header_area .main-menu .navbar .navbar-brand {
+.header_area .main-menu.navbar .navbar-brand {
     padding: 0 2rem 0 5rem;
 }
 
@@ -38,17 +38,12 @@
     background-clip: text;
 }
 
-
-
-
-
-
 /**/
 
 /* banner area */
 
 .site-main .site-banner {
-    background: url(../img/banner.jpeg) no-repeat 0% 50%;
+    background: url(../img/banner-background.jpeg) no-repeat 0% 50%;
 }
 
 
@@ -58,7 +53,7 @@
 }
 
 .site-main .site-banner .site-title h3::after {
-    content: "";
+    content: " ";
     height: 2px;
     width: 18vw;
     background: black;
