--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -1,18 +1,18 @@
 
 /*global classes */
 
-.title-text {
+.title-text{
     font: normal bold 50px/72px var(--font-family)
 }
 
 
-.text-uppercase {
+.text-uppercase{
     text-transform: uppercase;
 }
 
 /*buttons*/
 
-.button {
+.button{
     padding: 0.8rem 2.2rem;
     font: normal 500 16px/20px var(--font-family);
     position: relative;
@@ -20,10 +20,38 @@
     border-radius: 4px;
 }
 
-.button.primary-button {
+.button.primary-button{
     background: var(--gradient-color);
     background-clip: padding-box;
     color: whitesmoke;
     transition: background .6s ease;
-    box-shadow: var(--box-color);
+    box-shadow: var(--box-shadow);
+}
+
+.button.primary-button:hover{
+    background: whitesmoke;
+    background-clip: padding-box;
+    color: black;
+}
+
+.button.primary-button::after, .button.secondary-button::after{
+    position: absolute;
+    top: -2px;left: -2px;
+    bottom: -2px;right: -2px;
+    background: var(--gradient-color);
+    content: '';
+    z-index: -1;
+    border-radius: 4px;
+}
+
+.button.secondary-button {
+    background: white;
+    background-clip: padding-box;
+    transition: background .6s ease;
+}
+
+.button.secondary-button:hover{
+    background: var(--gradient-color);
+    color: whitesmoke;
+    box-shadow: var(--box-shadow);
 }
