--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,104 @@
 
 
 /**/
+
+/* about us section */
+.site-main .about {
+    padding: 8rem 5rem;
+}
+
+.site-main .about .about-title h2 > span{
+    display: block;
+    font: normal bold 49px/ 60px var(--font-family);
+    letter-spacing: 21px;
+}
+
+
+.site-main .about .about-title .paragraph > p{
+    padding: .4rem 0;
+}
+
+
+/**/
+
+/*start brand area*/
+
+.site-main .brand-area {
+    padding: 1rem 20rem;
+    margin-bottom: 4rem;
+}
+
+.site-main .brand-area .first-row .col-lg-4 {
+    display: flex;
+    justify-content: center;
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand {
+    border: 1px solid var(--border-color);
+    text-align: center;
+    padding: 1.8rem 0rem;
+    margin: .9rem 0rem;
+    width: 180px;
+    height: 100px;
+    cursor: pointer;
+    transition: transform .4s ease;
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand > img {
+    width: 50%;
+}
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover {
+    box-shadow: var(--box-shadow);
+    transform: scale(1.1);
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img {
+    filter: brightness(0.15);
+}
+
+.site-main .brand-area .experience-area {
+    padding-left: 1rem;
+}
+
+
+.site-main .brand-area .experience-area span {
+    display: block;
+}
+
+.site-main .brand-area .experience-area .years-area {
+    background: url(../img/dotted-square.jpeg) no-repeat 45px 20px;
+    padding: 2rem 0rem;
+    width: 40rem;
+    height: 18rem;
+    padding-left: 8rem;
+    position: relative;
+}
+/*
+.site-main .brand-area .experience-area .bg-panel {
+    
+    
+    margin-top: -350px;
+    margin-left: 150px;
+    position: absolute;
+    background-color: #e029290a;
+    width: 200px;
+    height: 200px;
+    z-index: -1;
+}*/
+
+.site-main .brand-area .experience-area .years-area .years {
+    font: normal bold 84px/40px var(--font-family);
+    color: var(--primary-color2);
+    z-index: 2;
+}
+
+
+.site-main .brand-area .experience-area .years-area h2 > span {
+    font: normal 600 22px/30px var(--font-family);
+}
+
+.site-main .brand-area .experience-area .call-area {
+    padding-left: 10rem;
+}
+
+/**/
